samples/_failures_safe/1761290964_ef4784_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7f3385e7.c: In function ‘print_compression_info’:
./samples/SAFE/__tmp_7f3385e7.c:141:12: error: missing terminating " character
  141 |     printf("
      |            ^
./samples/SAFE/__tmp_7f3385e7.c:141:5: error: expected expression at end of input
  141 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_7f3385e7.c:141:5: error: expected declaration or statement at end of input
